# braintrust-multi-turn-examples

./: .env.example  .gitignore  NOTICE  README.md  pyproject.toml
data/: sample_deposition.txt
docs/: braintrust-git-workflow.md  braintrust-integration.md  integration-explainer.md  prompt-registry.md
evals/: basic_eval.py
scripts/: create_dataset.py
src/backend/: __init__.py  main.py
src/backend/agent/: google_adk_agent.py  graph.py  langgraph_agent.py  openai_agents_agent.py  prompts.py  rag.py  runner.py  tools.py  tracing.py  types.py
src/backend/api/: models.py
src/backend/storage/: __init__.py  session_store.py
src/frontend/: components.json  index.html  package-lock.json  package.json
src/frontend/src/: App.tsx  api.ts  globals.css  styles.css
src/frontend/src/components/chat/: ChatHeader.tsx  Composer.tsx  Greeting.tsx  MessageBubble.tsx  MessageList.tsx
src/frontend/src/components/sidebar/: AppSidebar.tsx
src/frontend/src/components/ui/: scroll-area.tsx  separator.tsx  sheet.tsx  sidebar.tsx  tooltip.tsx
tests/: test_api_feedback.py  test_rag_pipeline.py  test_session_store.py
